Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Rpengine : RPEngine is an 3d rigidbody physics engine for simulation and game engine.">
+    <meta name="description" content="RPEngine : RPEngine is an 3d rigidbody physics engine for simulation and game engine.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Rpengine</title>
+    <title>RPEngine</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Woohyun-Kim/RPEngine">View on GitHub</a>
 
-          <h1 id="project_title">Rpengine</h1>
+          <h1 id="project_title">RPEngine</h1>
           <h2 id="project_tagline">RPEngine is an 3d rigidbody physics engine for simulation and game engine.</h2>
 
             <section id="downloads">
@@ -31,22 +31,56 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="rpengine" class="anchor" href="#rpengine" aria-hidden="true"><span class="octicon octicon-link"></span></a>RPEngine</h1>
+        <p>2015.06.04 ~ Current Date.</p>
 
-<p>RPEngine is physics an engine for simulation and game engine.</p>
+<h1>
+<a id="rpengine-13d_ver-20150604" class="anchor" href="#rpengine-13d_ver-20150604" aria-hidden="true"><span class="octicon octicon-link"></span></a>RPEngine 1.3d_ver 2015.06.04</h1>
 
-<p>ReadMe - tutorial </p>
+<p>3D Rigidbody Physics Engine.
+ Collision-based, CPU core based(Not GPU version)</p>
 
-<p>Korean Version : <a href="http://macgom.tistory.com/category/PhysicsEngine">http://macgom.tistory.com/category/PhysicsEngine</a>
-English Version will be added to text file in the project soon.</p>
+<ol>
+<li>
+<p>Purpose</p>
+
+<p>1.1. Education for engine development.
+ This engine is based on Cyclone Engine("Ian Millington, Game Physics Engine Development").
+ And this project also aiming to be an easy way to start your engine development.</p>
+
+<p>1.2. Real simulation and also game.
+ This engine should provide accuracy for real simulation and also proximate simulation(for game).</p>
+</li>
+<li><p>Features
+2.1. Supply for Plugged-in third party projects.
+ We hope you to make some frameworks providing an easy way to implement dynamics to any application based on this RPEngine so user can implement dynamics without any physical domain knowledge.</p></li>
+<li>
+<p>License</p>
+
+<p>MIT License</p>
+</li>
+<li>
+<p>Information</p>
+
+<p>4.1. Open Source URL
+ <a href="http://woohyun-kim.github.io/RPEngine">http://woohyun-kim.github.io/RPEngine</a></p>
+
+<p>4.2. For Korean
+ Visit this blog for tutorial.
+ <a href="http://macgom.tistory.com/category/PhysicsEngine">http://macgom.tistory.com/category/PhysicsEngine</a>
+ Then you can find and open the *.hwp(translated in korean) file for learning development.</p>
+
+<p>4.3. Contact
+ Republic of Korea, Woohyun Kim.
+ <a href="mailto:artrointel@gmail.com">artrointel@gmail.com</a></p>
+</li>
+</ol>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Rpengine maintained by <a href="https://github.com/Woohyun-Kim">Woohyun-Kim</a></p>
+        <p class="copyright">RPEngine maintained by <a href="https://github.com/Woohyun-Kim">Woohyun-Kim</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
